[package]
name = "cassie"
license = "ISC"
version = "0.1.0"
authors = ["Alex Hamilton <cassie@hmltn.me>"]
description = " "
homepage = "https://github.com/aehmlo/cassie"
documentation = "https://docs.rs/cassie"
repository = "https://github.com/aehmlo/cassie"
readme = "README.md"
keywords = []
categories = []


[dependencies]
