[package]
name = "cassie"
license = "ISC"
version = "0.1.2"
authors = ["Alex Hamilton <cassie@hmltn.me>"]
description = "A simple, limited computer algebra system written for the fun of it."
homepage = "https://github.com/aehmlo/cassie"
documentation = "https://docs.rs/cassie"
repository = "https://github.com/aehmlo/cassie"
readme = "README.md"
keywords = ["algebra", "symbolic", "math"]
categories = ["algorithms", "science"]

[dependencies]
